@@ -24,201 +24,57 @@
  */
 package hat.backend.ffi;
 
+import hat.buffer.F16Array;
 import hat.callgraph.KernelCallGraph;
 import hat.codebuilders.C99HATKernelBuilder;
-import hat.dialect.HATF16Op;
-import hat.dialect.HATTensorOp;
-import hat.dialect.HATVectorOp;
-import hat.types.BF16;
+import hat.dialect.BinaryOpEnum;
+import hat.phases.HATPhaseUtils;
 import hat.types.F16;
-import optkl.OpHelper;
-import optkl.codebuilders.CodeBuilder;
 import jdk.incubator.code.Value;
 import jdk.incubator.code.dialect.core.CoreOp;
+import jdk.incubator.code.dialect.core.VarType;
 import jdk.incubator.code.dialect.java.ClassType;
 import jdk.incubator.code.dialect.java.JavaOp;
+import jdk.incubator.code.dialect.java.JavaType;
 import jdk.incubator.code.dialect.java.PrimitiveType;
+import optkl.IfaceValue;
+import optkl.OpHelper;
 import optkl.codebuilders.ScopedCodeBuilderContext;
 import jdk.incubator.code.Op;
-import optkl.exceptions.CodeGenException;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Random;
+import java.util.Optional;
+import java.util.function.Consumer;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
+
+import static hat.phases.HATPhaseUtils.isMathLib;
+import static optkl.IfaceValue.Vector.getVectorShape;
 
 public class OpenCLHATKernelBuilder extends C99HATKernelBuilder<OpenCLHATKernelBuilder> {
 
-    protected OpenCLHATKernelBuilder(KernelCallGraph kernelCallGraph, ScopedCodeBuilderContext scopedCodeBuilderContext) {
-        super(kernelCallGraph,scopedCodeBuilderContext);
+    @FunctionalInterface
+    private interface CodeGenAction {
+        void apply() throws IllegalStateException;
     }
 
-    @Override
-    protected OpenCLHATKernelBuilder hatWarpSize() {
-        return constant("1");
-    }
+    private final Map<String, CodeGenAction> tensorTypeTable;
 
-    public OpenCLHATKernelBuilder vstore(int dims) {
-        return id("vstore" + dims);
-    }
+    private static final String EXTENSION = "EXTENSION";
+    private static final String OPENCL = "OPENCL";
+    private static final String ENABLE = "enable";
+    private static final String GLOBAL_ID = "get_global_id";
+    private static final String LOCAL_ID = "get_local_id";
+    private static final String GLOBAL_SIZE = "get_global_size";
+    private static final String LOCAL_SIZE = "get_local_size";
+    private static final String GROUP_ID = "get_group_id";
+    private static final String NUM_GROUPS = "get_num_groups";
 
-    public OpenCLHATKernelBuilder vload(int dims) {
-        return id("vload" + dims);
-    }
-
-    @Override
-    public OpenCLHATKernelBuilder defines() {
-        return self()
-                .hashDefine("HAT_OPENCL")
-                .hashIfndef("NULL", _ -> hashDefine("NULL", "0"))
-                .when(kernelCallGraph.usesAtomics,_->pragma("OPENCL", "EXTENSION", "cl_khr_global_int32_base_atomics", ":", "enable"))
-                .when(kernelCallGraph.usesAtomics,_->pragma("OPENCL", "EXTENSION", "cl_khr_local_int32_base_atomics", ":", "enable"))
-                /*.when(kernelCallGraph.usesFp16,_->*/.pragma("OPENCL", "EXTENSION", "cl_khr_fp16", ":", "enable")//)                      // Enable Half type
-                .hashDefine("HAT_FUNC", _ -> keyword(""))
-                .hashDefine("HAT_KERNEL", _ -> keyword("__kernel"))
-                .hashDefine("HAT_GLOBAL_MEM", _ -> keyword("__global"))
-                .hashDefine("HAT_LOCAL_MEM", _ -> keyword("__local"))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("gix"), _->hashDefine("HAT_GIX", _ -> paren(_ -> id("get_global_id").paren(_ -> intConstZero()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("giy"), _->hashDefine("HAT_GIY", _ -> paren(_ -> id("get_global_id").paren(_ -> intConstOne()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("giz"), _->hashDefine("HAT_GIZ", _ -> paren(_ -> id("get_global_id").paren(_ -> intConstTwo()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("lix"), _->hashDefine("HAT_LIX", _ -> paren(_ -> id("get_local_id").paren(_ -> intConstZero()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("liy"), _->hashDefine("HAT_LIY", _ -> paren(_ -> id("get_local_id").paren(_ -> intConstOne()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("liz"), _->hashDefine("HAT_LIZ", _ -> paren(_ -> id("get_local_id").paren(_ -> intConstTwo()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("gsx"), _->hashDefine("HAT_GSX", _ -> paren(_ -> id("get_global_size").paren(_ -> intConstZero()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("gsy"), _->hashDefine("HAT_GSY", _ -> paren(_ -> id("get_global_size").paren(_ -> intConstOne()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("gsz"), _->hashDefine("HAT_GSZ", _ -> paren(_ -> id("get_global_size").paren(_ -> intConstTwo()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("lsx"), _->hashDefine("HAT_LSX", _ -> paren(_ -> id("get_local_size").paren(_ -> intConstZero()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("lsy"), _->hashDefine("HAT_LSY", _ -> paren(_ -> id("get_local_size").paren(_ -> intConstOne()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("lsz"), _->hashDefine("HAT_LSZ", _ -> paren(_ -> id("get_local_size").paren(_ -> intConstTwo()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("bix"), _->hashDefine("HAT_BIX", _ -> paren(_ -> id("get_group_id").paren(_ -> intConstZero()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("biy"), _->hashDefine("HAT_BIY", _ -> paren(_ -> id("get_group_id").paren(_ -> intConstOne()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("biz"), _->hashDefine("HAT_BIZ", _ -> paren(_ -> id("get_group_id").paren(_ -> intConstTwo()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("bsx"), _->hashDefine("HAT_BSX", _ -> paren(_ -> id("get_num_groups").paren(_ -> intConstZero()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("bsy"), _->hashDefine("HAT_BSY", _ -> paren(_ -> id("get_num_groups").paren(_ -> intConstOne()))))
-                .when(kernelCallGraph.accessedKernelContextFields.contains("bsz"), _->hashDefine("HAT_BSZ", _ -> paren(_ -> id("get_num_groups").paren(_ -> intConstTwo()))))
-                .when(!kernelCallGraph.accessedFP16Classes.isEmpty(), _->maxMacro("MAX_HAT"))
-                .when(!kernelCallGraph.accessedFP16Classes.isEmpty(), _->minMacro("MIN_HAT"))
-                .when(kernelCallGraph.usesBarrier || kernelCallGraph.useTensors, _ ->hashDefine("HAT_BARRIER", _ -> id("barrier").oparen().id("CLK_LOCAL_MEM_FENCE").cparen()))
-                /*.when(callgraphState.usesFp16,_->*/.hashDefine("BFLOAT16", _ -> keyword("ushort"))//)
-                /*.when(callgraphState.usesFp16,_->*/.typedefSingleValueStruct("F16",  "half")//)
-                /*.when(callgraphState.usesFp16,_->*/.typedefSingleValueStruct("BF16",  "BFLOAT16")//)
-                /*.when(callgraphState.usesFp16,_->*/.unionBfloat16()//)
-                /*.when(callgraphState.usesFp16,_->*/.build_builtin_bfloat16ToFloat("bf16")//)
-                /*.when(callgraphState.usesFp16,_->*/.build_builtin_float2bfloat16("f")/*)*/;
-    }
-
-    @Override
-    public OpenCLHATKernelBuilder atomicInc( Op.Result instanceResult, String name) {
-        return id("atomic_inc").paren(_ -> ampersand().recurse( instanceResult.op()).rarrow().id(name));
-    }
-
-    @Override
-    public OpenCLHATKernelBuilder hatVectorStoreOp( HATVectorOp.HATVectorStoreView hatVectorStoreView) {
-        vstore(hatVectorStoreView.vectorShape().lanes()).paren(_-> {
-            // if the value to be stored is an operation, recurse on the operation
-            if (hatVectorStoreView.operands().get(1).result().op() instanceof HATVectorOp.HATVectorBinaryOp binOp) {
-                recurse(binOp);
-            } else {
-                varName(hatVectorStoreView);
-            }
-            csp().intConstZero().csp().ampersand().recurseResultOrThrow(hatVectorStoreView.operands().get(0));
-            either(hatVectorStoreView instanceof HATVectorOp.Shared, CodeBuilder::dot, CodeBuilder::rarrow);
-            id("array").sbrace(_ ->recurseResultOrThrow(hatVectorStoreView.operands().get(2)));
-        });
-        return self();
-    }
-
-    @Override
-    public OpenCLHATKernelBuilder hatBinaryVectorOp( HATVectorOp.HATVectorBinaryOp binOp) {
-        return paren(_-> {
-            recurseResultOrThrow(binOp.operands().get(0));
-            sp().id(binOp.operationType().symbol()).sp();
-            recurseResultOrThrow(binOp.operands().get(1));
-        });
-    }
-
-    @Override
-    public OpenCLHATKernelBuilder hatVectorLoadOp( HATVectorOp.HATVectorLoadOp hatVectorLoadOp) {
-        vload(hatVectorLoadOp.vectorShape().lanes()).paren(_-> {
-            intConstZero().comma().sp().ampersand();
-            recurseResultOrThrow( hatVectorLoadOp.operands().get(0));
-            either(hatVectorLoadOp instanceof HATVectorOp.Shared, CodeBuilder::dot, CodeBuilder::rarrow);
-            id("array").sbrace(_ -> recurseResultOrThrow( hatVectorLoadOp.operands().get(1)));
-        });
-        return self();
-    }
-
-    @Override
-    public OpenCLHATKernelBuilder hatSelectLoadOp( HATVectorOp.HATVectorSelectLoadOp hatVSelectLoadOp) {
-        if (hatVSelectLoadOp.operands().getFirst().result().op() instanceof HATVectorOp.HATVectorLoadOp vLoadOp) {
-            recurse( vLoadOp);
-        } else {
-            id(hatVSelectLoadOp.varName());
-        }
-        dot().id(hatVSelectLoadOp.mapLane());
-        return self();
-    }
-
-    @Override
-    public OpenCLHATKernelBuilder hatSelectStoreOp( HATVectorOp.HATVectorSelectStoreOp hatVSelectStoreOp) {
-        if (hatVSelectStoreOp.operands().getFirst().result().op() instanceof HATVectorOp.HATVectorLoadOp vLoadOp) {
-            recurse( vLoadOp);
-        } else {
-            id(hatVSelectStoreOp.varName());
-        }
-        dot().id(hatVSelectStoreOp.mapLane()).assign();
-        return either (hatVSelectStoreOp.resolvedName() != null,
-                _-> varName(hatVSelectStoreOp.resolvedName()),
-                _-> recurseResultOrThrow(hatVSelectStoreOp.operands().get(1))
-        );
-    }
-
-    @Override
-    public OpenCLHATKernelBuilder hatF16ConvOp( HATF16Op.HATF16ConvOp hatF16ConvOp) {
-        var reducedFloatType = hatF16ConvOp.float16Class();
-        return paren(_-> f16OrBF16(reducedFloatType)).brace(_-> {
-            either (BF16.class.isAssignableFrom(reducedFloatType),
-                    _-> builtin_float2bfloat16().paren(_-> recurseResultOrThrow(hatF16ConvOp.operands().getFirst())),
-                    _-> recurseResultOrThrow( hatF16ConvOp.operands().getFirst())
-            );
-        });
-    }
-
-    @Override
-    public OpenCLHATKernelBuilder hatVectorVarOp( HATVectorOp.HATVectorVarOp hatVectorVarOp) {
-        type(hatVectorVarOp.buildType()).sp().varName(hatVectorVarOp).sp().equals().sp();
-        recurseResultOrThrow( hatVectorVarOp.operands().getFirst());
-        return self();
-    }
-
-    @Override
-    public OpenCLHATKernelBuilder genVectorIdentifier( HATVectorOp.HATVectorOfOp hatVectorOfOp) {
-        return paren(_-> id(hatVectorOfOp.buildType()));
-    }
-
-    @Override
-    public OpenCLHATKernelBuilder hatF16ToFloatConvOp( HATF16Op.HATF16ToFloatConvOp hatF16ToFloatConvOp) {
-        // Type conversions: half,bfloat16 -> float
-        var reducedFloatType = hatF16ToFloatConvOp.float16Class();
-
-        if (F16.class.isAssignableFrom(reducedFloatType)) {// half -> float
-            paren(_->f32Type());
-        } else if (BF16.class.isAssignableFrom(reducedFloatType)) {// bfloat16 -> float
-            builtin_bfloat16ToFloat();
-        }
-        parenWhen(BF16.class.isAssignableFrom(reducedFloatType),_-> {
-            recurseResultOrThrow(hatF16ToFloatConvOp.operands().getFirst());
-            if (!hatF16ToFloatConvOp.isLocal()) {
-                rarrow();
-            } else if (!hatF16ToFloatConvOp.wasFloat()) {
-                dot();
-            } else{
-                throw new OpenCLCodeGenException("Can we get here");
-            }
-            id("value");
-        });
-        return self();
-    }
+    // OpenCL 1.2 maps warp size to 1
+    private static final int OPENCL_WARP_SIZE = 1;
 
     // Mapping between API function names and OpenCL intrinsics for the math operations
     private static final Map<String, String> MATH_FUNCTIONS = new HashMap<>();
@@ -250,201 +106,295 @@ public class OpenCLHATKernelBuilder extends C99HATKernelBuilder<OpenCLHATKernelB
         MATH_FUNCTIONS.put("sqrtd", "sqrt");
     }
 
-    @Override
-    protected String mapMathIntrinsic(String hatMathIntrinsicName) {
-        return MATH_FUNCTIONS.getOrDefault(hatMathIntrinsicName, hatMathIntrinsicName);
+    protected OpenCLHATKernelBuilder(KernelCallGraph kernelCallGraph, ScopedCodeBuilderContext scopedCodeBuilderContext) {
+        super(kernelCallGraph, scopedCodeBuilderContext);
+        tensorTypeTable = new HashMap<>();
+        tensorTypeTable.put("loadF16", this::f16Type);
+        tensorTypeTable.put("load", this::f32Type);
+        tensorTypeTable.put("loadF32", this::f32Type);
     }
 
     @Override
-    public OpenCLCodeGenException launchBackendException(String message) {
-        throw new OpenCLCodeGenException(message);
+    public OpenCLHATKernelBuilder defines() {
+        return self()
+                .hashDefine("HAT_OPENCL")
+                .hashIfndef("NULL", _ -> hashDefine("NULL", "0"))
+                .when(useAtomic(),_->pragma(OPENCL, EXTENSION, "cl_khr_global_int32_base_atomics", ":", ENABLE))
+                .when(useAtomic(),_->pragma(OPENCL, EXTENSION, "cl_khr_local_int32_base_atomics", ":", ENABLE))
+                .when(useS16Types(), _ -> pragma(OPENCL, EXTENSION, "cl_khr_fp16", ":", ENABLE))
+                .hashDefine("HAT_FUNC", _ -> keyword(""))
+                .hashDefine("HAT_KERNEL", _ -> keyword("__kernel"))
+                .hashDefine("HAT_GLOBAL_MEM", _ -> keyword("__global"))
+                .hashDefine("HAT_LOCAL_MEM", _ -> keyword("__local"))
+
+                // General macros
+                .when(useVectors() || useS16Types(), _ -> concatMacro())
+                .when(useVectors() || useS16Types(), _ -> prefixMacro())
+
+                // Vector macros
+                .when(useVectors(), _ -> defineVectorAccessMacro("VECTOR_0",false))
+                .when(useVectors(), _ -> defineVectorAccessMacro("VECTOR_1",true))
+                .when(useVectors(), _ -> defineMacroVLoadN())
+                .when(useVectors(), _ -> defineMacroVStoreN())
+                .when(useVectors(), _ -> defineMacroVectorOf(2))
+                .when(useVectors(), _ -> defineMacroVectorOf(3))
+                .when(useVectors(), _ -> defineMacroVectorOf(4))
+                .when(useVectors(), _ -> defineMacroVectorSelectLoad(VSELECT_LOAD))
+                .when(useVectors(), _ -> defineMacroVectorSelectStore(VSELECT_STORE))
+
+                // Narrow types macros
+                .when(useS16Types(), _ ->defineMacroBF16Of())
+                .when(useS16Types(), _ ->defineMacroF162Float(F16_TO_FLOAT_0, false))
+                .when(useS16Types(), _ ->defineMacroF162Float(F16_TO_FLOAT_1, true))
+                .when(useS16Types(), _ -> defineMacroF16Of())
+                .when(useS16Types(), _ ->defineMacroBF162Float(BF16_TO_FLOAT_0, false))
+                .when(useS16Types(), _ ->defineMacroBF162Float(BF16_TO_FLOAT_1, true))
+
+                // Thread access macros
+                .when(useThreadConstruct("gix"), _-> hashDefine("HAT_GIX", _ -> paren(_ -> id(GLOBAL_ID).paren(_ -> intConstZero()))))
+                .when(useThreadConstruct("giy"), _-> hashDefine("HAT_GIY", _ -> paren(_ -> id(GLOBAL_ID).paren(_ -> intConstOne()))))
+                .when(useThreadConstruct("giz"), _-> hashDefine("HAT_GIZ", _ -> paren(_ -> id(GLOBAL_ID).paren(_ -> intConstTwo()))))
+                .when(useThreadConstruct("lix"), _-> hashDefine("HAT_LIX", _ -> paren(_ -> id(LOCAL_ID).paren(_ -> intConstZero()))))
+                .when(useThreadConstruct("liy"), _-> hashDefine("HAT_LIY", _ -> paren(_ -> id(LOCAL_ID).paren(_ -> intConstOne()))))
+                .when(useThreadConstruct("liz"), _-> hashDefine("HAT_LIZ", _ -> paren(_ -> id(LOCAL_ID).paren(_ -> intConstTwo()))))
+                .when(useThreadConstruct("gsx"), _-> hashDefine("HAT_GSX", _ -> paren(_ -> id(GLOBAL_SIZE).paren(_ -> intConstZero()))))
+                .when(useThreadConstruct("gsy"), _-> hashDefine("HAT_GSY", _ -> paren(_ -> id(GLOBAL_SIZE).paren(_ -> intConstOne()))))
+                .when(useThreadConstruct("gsz"), _-> hashDefine("HAT_GSZ", _ -> paren(_ -> id(GLOBAL_SIZE).paren(_ -> intConstTwo()))))
+                .when(useThreadConstruct("lsx"), _-> hashDefine("HAT_LSX", _ -> paren(_ -> id(LOCAL_SIZE).paren(_ -> intConstZero()))))
+                .when(useThreadConstruct("lsy"), _-> hashDefine("HAT_LSY", _ -> paren(_ -> id(LOCAL_SIZE).paren(_ -> intConstOne()))))
+                .when(useThreadConstruct("lsz"), _-> hashDefine("HAT_LSZ", _ -> paren(_ -> id(LOCAL_SIZE).paren(_ -> intConstTwo()))))
+                .when(useThreadConstruct("bix"), _-> hashDefine("HAT_BIX", _ -> paren(_ -> id(GROUP_ID).paren(_ -> intConstZero()))))
+                .when(useThreadConstruct("biy"), _-> hashDefine("HAT_BIY", _ -> paren(_ -> id(GROUP_ID).paren(_ -> intConstOne()))))
+                .when(useThreadConstruct("biz"), _-> hashDefine("HAT_BIZ", _ -> paren(_ -> id(GROUP_ID).paren(_ -> intConstTwo()))))
+                .when(useThreadConstruct("bsx"), _-> hashDefine("HAT_BSX", _ -> paren(_ -> id(NUM_GROUPS).paren(_ -> intConstZero()))))
+                .when(useThreadConstruct("bsy"), _-> hashDefine("HAT_BSY", _ -> paren(_ -> id(NUM_GROUPS).paren(_ -> intConstOne()))))
+                .when(useThreadConstruct("bsz"), _-> hashDefine("HAT_BSZ", _ -> paren(_ -> id(NUM_GROUPS).paren(_ -> intConstTwo()))))
+                .when(useThreadConstruct("wrs"), _-> hashDefine("HAT_WRS", _ -> paren(_ -> intValue(OPENCL_WARP_SIZE))))
+
+                // Math Functions
+                .when(useS16Types(), _->maxMacro("MAX_HAT"))
+                .when(useS16Types(), _->minMacro("MIN_HAT"))
+
+                // Barrier
+                .when(useBarrier(), _ ->hashDefine("HAT_BARRIER", _ -> id("barrier").oparen().id("CLK_LOCAL_MEM_FENCE").cparen()))
+
+                // S16 transformations macros
+                .when(useS16Types(), _ -> hashDefine("BFLOAT16", _ -> keyword("ushort")))
+                .when(useS16Types(), _ -> typedefSingleValueStruct("F16",  "half"))
+                .when(useS16Types(), _ -> typedefSingleValueStruct("BF16",  "BFLOAT16"))
+                .when(useS16Types(), _ -> unionBfloat16())
+                .when(useS16Types(), _ -> build_builtin_bfloat16ToFloat("bf16"))
+                .when(useS16Types(), _ -> build_builtin_float2bfloat16("f"))
+
+                // Tensor Macros
+                .when(useTensors(), _ -> defineMacroCond(MACRO_COND))
+                .when(useTensors(), _ -> defineFragmentCreate(MACRO_FRAMGMENT_CREATE))
+                .when(useTensors(), _ -> defineMacroTensorFill(MACRO_FRAGMENT_FILL))
+                .when(useTensors(), _ -> defineMacroTensorMMA(MACRO_FRAGMENT_MMA))
+                .when(useTensors(), _ -> defineMacroTensorLoad(MACRO_FRAGMENT_LOAD_F16))
+                .when(useTensors(), _ -> defineMacroTensorStore(MACRO_FRAGMENT_STORE));
     }
 
     @Override
-    public OpenCLHATKernelBuilder hatTensorVarOp(HATTensorOp.TensorVarOp tensorVarOp) {
-        recurse(OpHelper.asResultOrThrow(tensorVarOp.operands().getFirst()).op());
-        // We don't need to generate the name at this point, but rather during tensor create.
-        // That's the place we know all information, including type, shape, and name
-        return self();
+    public OpenCLHATKernelBuilder atomicInc( Op.Result instanceResult, String name) {
+        return id("atomic_inc").paren(_ -> ampersand().recurse( instanceResult.op()).rarrow().id(name));
     }
 
-    @Override
-    public OpenCLHATKernelBuilder hatTensorCreateOp(HATTensorOp.TensorCreateOp tensorCreateOp) {
-        List<Value> operands = tensorCreateOp.operands();
-
-        // Second parameters: analysis of the shape
-        int[] shape = new int[3];
-        Value second = operands.get(1);
-        if (second.declaringElement() instanceof JavaOp.InvokeOp invokeOp) {
-            List<Value> shapeOperands = invokeOp.operands();
-            for (int i = 0; i < shapeOperands.size(); i++) {
-                Value shapeOperand = shapeOperands.get(i);
-                if (shapeOperand.declaringElement() instanceof CoreOp.ConstantOp constantOp) {
-                    shape[i] = (int) constantOp.value();
-                }
-            }
-        }
-
-        // The third parameter is the type. It could be `half` or `float` as first implementation
-        // This parameter is another constant with the type
-        Value classOperand = operands.get(2);
-        Object klass = null;
-        if (classOperand.declaringElement() instanceof CoreOp.ConstantOp constantOp) {
-            klass = constantOp.value();
-        }
-
-        var tensorVarValue = tensorCreateOp.result().uses().getFirst();
-        String varTensorName = null;
-        if (tensorVarValue.declaringElement() instanceof HATTensorOp.TensorVarOp tensorVarOp) {
-            varTensorName = tensorVarOp.varName();
-        }
-        final int size = shape[0] * shape[1];
-        if (tensorCreateOp.operands().size() > 3) {
-            // Share memory only for the input tiles (tensors)
-            // The accumulator is stored in private memory
-            HAT_LOCAL_MEM().sp();
-        }
-
-        switch (klass) {
-            case ClassType classType when classType.toClassName().equals(F16.class.getCanonicalName()) -> f16Type();
-            case PrimitiveType primitiveType when primitiveType.equals(PrimitiveType.FLOAT) -> type("float");
-            case null, default -> throw new OpenCLCodeGenException("[ERROR] Codegen. Type " + klass + " not expected");
-        }
-        sp().varName(varTensorName).sbrace(_-> constant(Integer.toString(size)));
-        return self();
+    private OpenCLHATKernelBuilder defineMacroVectors(String macroName, List<String> params, String construct, Consumer<C99HATKernelBuilder> codeBuilder) {
+        return macroNoParenthesis(macroName, params, _ -> id(CONCAT)
+                .paren(_ -> id(construct).comma().id(N))
+                .paren( _ -> {
+                        codeBuilder.accept(self());
+                        intConstZero().comma().sp().id(CONCAT)
+                        .paren(_ -> id(VECTOR).comma().id(IS_LOCAL))
+                        .paren( _ -> id(ADDDR).comma().id(INDEX));
+                }));
     }
-
-    static HATTensorOp.TensorVarOp findTensorVarOp(Value varLoadOp) {
-        return switch (varLoadOp.declaringElement()) {
-            case HATTensorOp.TensorVarLoadOp tensorVarLoadOp -> findTensorVarOp(tensorVarLoadOp.operands().getFirst());
-            case CoreOp.VarAccessOp.VarLoadOp varLoadOp2 -> findTensorVarOp(varLoadOp2.operands().getFirst());
-            case HATTensorOp.TensorVarOp tensorVarOp -> tensorVarOp;
-            case null, default -> null;
-        };
-    }
-
-    static float getValueConstantTensor(Value v) {
-        if ((v instanceof Op.Result r && r.op() instanceof CoreOp.ConstantOp constant)) {
-            Object valueConstant = constant.value();
-            return (float) valueConstant;
-
-        } else if (v instanceof Op.Result r) {
-            return getValueConstantTensor(r.op().operands().getFirst());
-        }
-        return -1.0f;
-    }
-
-    private int[] getShapeFromTensorCreateValue(Value tensorCreateValue) {
-        if (tensorCreateValue.declaringElement() instanceof HATTensorOp.TensorCreateOp tensorCreateOp) {
-            // Second parameters: analysis of the shape
-            int[] shape = new int[3];
-            Value second = tensorCreateOp.operands().get(1);
-            if (second.declaringElement() instanceof JavaOp.InvokeOp invokeOp) {
-                List<Value> shapeOperands = invokeOp.operands();
-                for (int i = 0; i < shapeOperands.size(); i++) {
-                    Value shapeOperand = shapeOperands.get(i);
-                    if (shapeOperand.declaringElement() instanceof CoreOp.ConstantOp constantOp) {
-                        shape[i] = (int) constantOp.value();
-                    }
-                }
-            }
-            return shape;
-        }
-        return new int[]{};
-    }
-
-    private int[] getShapeFromTensorVarOp(HATTensorOp.TensorVarOp tensorVarOp) {
-        Value tensorCreateValueOp = tensorVarOp.operands().getFirst();
-        if (tensorCreateValueOp.declaringElement() instanceof HATTensorOp.TensorCreateOp tensorCreateOp) {
-            // Second parameters: analysis of the shape
-            int[] shape = new int[3];
-            Value second = tensorCreateOp.operands().get(1);
-            if (second.declaringElement() instanceof JavaOp.InvokeOp invokeOp) {
-                List<Value> shapeOperands = invokeOp.operands();
-                for (int i = 0; i < shapeOperands.size(); i++) {
-                    Value shapeOperand = shapeOperands.get(i);
-                    if (shapeOperand.declaringElement() instanceof CoreOp.ConstantOp constantOp) {
-                        shape[i] = (int) constantOp.value();
-                    }
-                }
-            }
-            return shape;
-        }
-        return new int[]{};
-    }
-
-    private boolean isColumnMajorFromVarOp(HATTensorOp.TensorVarOp tensorVarOp) {
-        Value tensorCreateValueOp = tensorVarOp.operands().getFirst();
-        if (tensorCreateValueOp.declaringElement() instanceof HATTensorOp.TensorCreateOp tensorCreateOp) {
-            // Parameter 3 defines the access layout
-            Value valueLayout = tensorCreateOp.operands().get(3);
-            return isColumnMajor(valueLayout);
-        }
-        return false;
-    }
-
-    private String generateVariableName(String prefix) {
-        String vocab = "abcdefghijklmnopqrstuvxyz";
-        Random r = new Random();
-        StringBuilder varA = new StringBuilder(prefix);
-        for (int i = 0; i < 3; i++) {
-            varA.append(vocab.charAt(r.nextInt(vocab.length())));
-        }
-        return varA.toString();
-    }
-
-    private static final String INDEX_PREFIX = "index_$";
 
     /**
-     * Code example being generated:
-     *
-     * <p>
-     *     <code>
-     *          for (int m = 0; m < " + shape[0] + "; m++) {
-     *           for (int n = 0; n < " + shape[1] + "; n++) {
-     *             tensorVarOp.varName() + "[m * " + shape[0] + " + n] = " + initValue + "f;" + "}" + "}");
-     *     </code>
-     * </p>
-     *
-     * @param from
-     * @param to
-     * @param tensorVarOp
-     * @param initValue
+     * <code>
+     *     #define VLOADN(N, addr, index, isLocal) CONCAT(vload, N)(0, CONCAT(VECTOR_, isLocal)(addr, index))
+     * </code>
      *
      * @return {@link OpenCLHATKernelBuilder}
      */
-    private OpenCLHATKernelBuilder emitForLoopWithBound(int from, int to, HATTensorOp.TensorVarOp tensorVarOp, float initValue) {
-        String prefix = INDEX_PREFIX;
-        String varA = generateVariableName(prefix);
-        String varB = generateVariableName(prefix);
-        forKeyword().sp().paren(_ -> {
-            s32Type().sp().id(varA).assign().intValue(from).semicolon();
-            id(varA).sp().lt().sp().intValue(to).semicolon();
-            id(varA).plusplus();
-        }).sp().brace(_ -> {
-            in().nl().forKeyword().sp().paren(_ -> {
-                s32Type().sp().id(varB).assign().intValue(from).semicolon();
-                id(varB).sp().lt().sp().intValue(to).semicolon();
-                id(varB).plusplus();
-            }).sp().in();
-
-            brace(_ -> nl()
-                    .id(tensorVarOp.varName())
-                    .sbrace(_ ->
-                            id(varA).mul()
-                            .id(Integer.toString(to))
-                            .plus()
-                            .id(varB))
-                            .assign()
-                            .constant(Float.toString(initValue)).id("f")
-                            .semicolon().nl()).out().out();
-        });
-        return self();
+    private OpenCLHATKernelBuilder defineMacroVLoadN() {
+        return defineMacroVectors(VLOADN, getMacroVectorParamsLoad(), VLOAD,  _ -> self());
     }
 
-    private OpenCLHATKernelBuilder emitTensorFill(int[] shape, HATTensorOp.TensorVarOp tensorVarOp, float initValue) {
+    /**
+     * <code>
+     *     #define VSTOREN(N, addr, index, isLocal, vectorVal) CONCAT(vstore, N)((vectorVal), 0, CONCAT(VECTOR_, isLocal)(addr, index))
+     * </code>
+     *
+     * @return {@link OpenCLHATKernelBuilder}
+     */
+    private OpenCLHATKernelBuilder defineMacroVStoreN() {
+        return defineMacroVectors(VSTOREN, getMacroVectorParamsStore(), VSTORE,  _ ->  id(VECTOR_VAL).comma().sp());
+    }
 
-        return emitForLoopWithBound(0, shape[0], tensorVarOp, initValue);
+    /**
+     * <code>
+     *     #define VECTOR_OF4(elementType, p0, p1, p2, p3) (CONCAT(elementType,4))(p0,p1,p2,p3)
+     * </code>
+     *
+     * @param lanes
+     *  vector width
+     * @return {@link OpenCLHATKernelBuilder}
+     */
+    private OpenCLHATKernelBuilder defineMacroVectorOf(int lanes) {
+        List<String> params = new ArrayList<>();
+        params.add(ELEMENT_TYPE);
+        IntStream.range(0, lanes).mapToObj(i -> "p" + i).forEach(params::add);
+        return macroNoParenthesis(VECTOR_OF + lanes, params, _ -> {
+            paren(_ -> id(CONCAT).paren(_ -> id(ELEMENT_TYPE).comma().id(String.valueOf(lanes))));
+            paren(_ -> {
+                for (int i = 1; i < params.size(); i++) {
+                    id(params.get(i));
+                    either((i < params.size() - 1), _ -> comma(), _ -> self());
+                }
+            });
+        });
+    }
+
+    /**
+     * <code>
+     * #define F16_OF(val) (F16_t){(val)}
+     * </code>
+     *
+     * @return {@link OpenCLHATKernelBuilder}
+     */
+    private OpenCLHATKernelBuilder defineMacroF16Of() {
+        List<String> params = List.of("val");
+        return macroNoParenthesis(C99HATKernelBuilder.F16_OF, params, _ ->
+                paren(_ -> f16Type())
+                        .brace(_ ->
+                                paren(_-> id("val"))));
+    }
+
+    /**
+     * <code>
+     *  #define BF16_OF(val) (BF16_t){floatTobfloat16(val)}
+     * </code>
+     *
+     * @return {@link OpenCLHATKernelBuilder}
+     */
+    private OpenCLHATKernelBuilder defineMacroBF16Of() {
+        List<String> params = List.of("val");
+        return macroNoParenthesis(C99HATKernelBuilder.BF16_OF, params, _ ->
+                paren(_ -> bf16Type())
+                        .brace(_ -> builtin_float2bfloat16().paren(_-> id("val"))));
+    }
+
+    /**
+     * <code>
+     *     #define F16_TO_FLOAT_0(val) (float)(val->value)
+     *     #define F16_TO_FLOAT_1(val) (float)(val.value)
+     * </code>
+     *
+     * @param name
+     *       Name of the OpenCL Macro
+     * @param isLocal
+     *       Flag to indicate if access is from a local/private region or global region.
+     * @return {@link OpenCLHATKernelBuilder}
+     */
+    private OpenCLHATKernelBuilder defineMacroF162Float(String name, boolean isLocal) {
+        List<String> params = List.of("val");
+        return macroNoParenthesis(name, params, _ ->
+                paren(_ -> f32Type())
+                        .paren(_-> id("val")
+                                .dotOrArrow(isLocal)
+                                .id(VALUE)));
+    }
+
+    /**
+     * <code>
+     *     #define BF16_TO_FLOAT_0(val) (bfloat16Tofloat(val->value))
+     *     #define BF16_TO_FLOAT_1(val) (bfloat16Tofloat(val.value))
+     * </code>
+     * @param name
+     *     Name of the OpenCL Macro
+     * @param isLocal
+     *     Flag to indicate if access is from a local/private region or global region.
+     * @return {@link OpenCLHATKernelBuilder}
+     */
+    private OpenCLHATKernelBuilder defineMacroBF162Float(String name, boolean isLocal) {
+        List<String> params = List.of("val");
+        return macroNoParenthesis(name, params, _ ->
+                paren(_ -> builtin_bfloat16ToFloat()
+                        .paren(_-> id("val")
+                                .dotOrArrow(isLocal)
+                                .id(VALUE))));
+    }
+
+    private OpenCLHATKernelBuilder forLoop(String i, String from, String to) {
+        return forKeyword().sp().paren(_ -> {
+            s32Type().sp().id(i).assign().id(from).semicolon();
+            id(i).sp().lt().sp().id(to).semicolon();
+            id(i).plusplus();
+        });
+    }
+
+    /**
+     * <code>
+     *  #define MACRO_COND(row, col, condition) ((condition) ? (col) : (row))
+     * </code>
+     *
+     * @param macroName
+     *
+     * @return {@link OpenCLHATKernelBuilder}
+     */
+    private OpenCLHATKernelBuilder defineMacroCond(String macroName) {
+        List<String> macroCondAssignParams = List.of("row", "col", "condition");
+        return macroNoParenthesis(macroName, macroCondAssignParams, _ ->
+                paren(_ -> parenId("condition").sp().questionMark().sp().parenId("col").sp().colon().sp().parenId("row"))).nl();
+    }
+
+    /**
+     * List of macros using __VA_ARGS__:
+     *
+     * <p>
+     * <code>
+     * #define FRAGMENT_CREATE_3(type, name, size) type name[size]
+     * #define FRAGMENT_CREATE_7(kind, size, m, n, k, type, name) nvcuda::wmma::fragment<nvcuda::wmma::kind, m, n, k, type> name
+     * #define FRAGMENT_CREATE_8(kind, size, m, n, k, type, layout, name) nvcuda::wmma::fragment<nvcuda::wmma::kind, m, n, k, type, layout> name
+     * #define FRAGMENT_CREATE_SELECT(_1, _2, _3, _4, _5, _6, _7, _8, NAME, ...) NAME
+     * #define FRAGMENT_CREATE(...) FRAGMENT_CREATE_SELECT(__VA_ARGS__,FRAGMENT_CREATE_8,FRAGMENT_CREATE_7,INVALID,INVALID,INVALID,FRAGMENT_CREATE_3)(__VA_ARGS__)
+     * </code>
+     * </p>
+     *
+     * @param macroName
+     * @return {@link OpenCLHATKernelBuilder}
+     */
+    private OpenCLHATKernelBuilder defineFragmentCreate(String macroName) {
+        List<String> params = List.of("type",  "name", "size");
+        macroNoParenthesis(macroName + "_3", params, _ ->
+                id(params.getFirst()).sp().id(params.get(1)).sbrace(_ -> id(params.get(2))));
+
+        List<String> params1  = List.of("kind", "size", "m", "n", "k", "type", "name");
+        macroNoParenthesis(macroName + "_7", params1, _ ->
+                id(params1.get(5)).sp().id(params1.get(6)).sbrace(_ -> id(params1.get(1))));
+
+        List<String> params2 = List.of("kind", "size", "m", "n", "k", "type", "layout", "name");
+        macroNoParenthesis(macroName + "_8", params2, _ ->
+                id(params2.get(5)).sp().id(params2.get(7)).sbrace(_ -> id(params2.get(1))));
+
+        List<String> params3 = List.of("_1", "_2", "_3", "_4", "_5", "_6", "_7", "_8", "NAME", "...");
+        macroNoParenthesis("FRAGMENT_CREATE_SELECT", params3, _ ->
+                id("NAME"));
+
+        List<String> params4 = List.of("...");
+        macroNoParenthesis("FRAGMENT_CREATE", params4, _ ->
+                id("FRAGMENT_CREATE_SELECT").paren(_ ->
+                        id("__VA_ARGS__").comma()
+                                .id("FRAGMENT_CREATE_8").comma()
+                                .id("FRAGMENT_CREATE_7").comma()
+                                .id("INVALID").comma()
+                                .id("INVALID").comma()
+                                .id("INVALID").comma()
+                                .id("FRAGMENT_CREATE_3"))
+                        .paren( _ -> id("__VA_ARGS__")));
+        return self();
     }
 
     /**
@@ -454,45 +404,32 @@ public class OpenCLHATKernelBuilder extends C99HATKernelBuilder<OpenCLHATKernelB
      *     <code>
      *       for (int m = 0; m < SHAPE_1; m++)
      *           for (int n = 0; n < SHAPE_2; n++)
-     *             tensor[m * SHAPE_1 + n] = initValue;
+     *             tensor[m * SHAPE_2 + n] = initValue;
      *     </code>
      * </p>
      *
-     * @param tensorFillOp
+     * @param name
+     *     Macro name
      *
      * @return {@link OpenCLHATKernelBuilder}
      */
-    @Override
-    public OpenCLHATKernelBuilder hatTensorFillOp(HATTensorOp.TensorFillOp tensorFillOp) {
-
-        // 1. Access to the variable name
-        var tensorValue = tensorFillOp.operands().getFirst();
-        HATTensorOp.TensorVarOp tensorVarOp = findTensorVarOp(tensorValue);
-        if (tensorVarOp == null) {
-            throw new OpenCLCodeGenException("[Error][Codegen] Expected a tensorVarOp, but found `null` instead");
-        }
-
-        // 2. Access the shape
-        // Second parameters: analysis of the shape
-        Value tensorAccDecl = tensorVarOp.operands().getFirst();
-        int[] shape = getShapeFromTensorCreateValue(tensorAccDecl);
-
-        // 3. Access the layout
-        var tensorInitValue = tensorFillOp.operands().get(1);
-        float initValue = getValueConstantTensor(tensorInitValue);
-
-        emitTensorFill(shape, tensorVarOp, initValue);
-        return self();
-    }
-
-    @Override
-    public OpenCLHATKernelBuilder hatTensorVarLoadOp(HATTensorOp.TensorVarLoadOp hatTensorVarLoadOp) {
-        Value operand = hatTensorVarLoadOp.operands().getFirst();
-        if (operand instanceof Op.Result r && r.op() instanceof HATTensorOp.TensorVarOp tensorVarOp) {
-            varName(tensorVarOp.varName());
-        } else {
-            throw new OpenCLCodeGenException("[ERROR] Expected HATTensorVarOp");
-        }
+    private OpenCLHATKernelBuilder defineMacroTensorFill(String name) {
+        List<String> params = paramsOfTensorFillMacro();
+        hashDefineKeyword().sp().id(name).paren( _ -> commaSpaceSeparated(params, this::id)).sp().backslash().nl();
+        String from = ZERO;
+        forLoop(params.get(0), from, params.get(3)).sp().brace(_ -> {
+            in().sp().backslash().nl().forLoop(params.get(1), from, params.get(4)).sp().in();
+            brace(_ -> sp().backslash().nl()
+                    .id(ARRAY)
+                    .sbrace(_ ->
+                            id(params.getFirst()).mul()
+                                    .id(params.get(4))
+                                    .plus()
+                                    .id(params.get(1)))
+                    .assign().constant(params.get(5))
+                    .semicolon().sp().backslash().nl()).out().out();
+        });
+        sp().backslash().nl();
         return self();
     }
 
@@ -502,11 +439,11 @@ public class OpenCLHATKernelBuilder extends C99HATKernelBuilder<OpenCLHATKernelB
      * <p>
      * <code>
      *  for (int m = 0; m < WMMA_M; m++) {
-           for (int n = 0; n < WMMA_N; n++) {
+     *    for (int n = 0; n < WMMA_N; n++) {
      *       float sum = acc[m][n];
      *       for (int k = 0; k < WMMA_K; k++) {
-     *         F16_t ha = a_frag[m * WMMA_M + k];
-     *         F16_t hb = b_frag[k * WMMA_M + n];
+     *         F16_t ha = a_frag[m * WMMA_K + k];
+     *         F16_t hb = b_frag[k * WMMA_N + n];
      *         F16_t result = (F16_t){(ha.value * hb.value)};
      *         sum += (float)(result.value);
      *       }
@@ -516,102 +453,297 @@ public class OpenCLHATKernelBuilder extends C99HATKernelBuilder<OpenCLHATKernelB
      * </code>
      * </p>
      *
-     * @param shape
-     * @param tensorA
-     * @param tensorB
-     * @param tensorC
-     * @param result
-     *
-     * @return {@link OpenCLHATKernelBuilder}
      */
-    private OpenCLHATKernelBuilder generateTensorMMA(int[] shape, HATTensorOp.TensorVarOp tensorA, HATTensorOp.TensorVarOp tensorB, HATTensorOp.TensorVarOp tensorC, HATTensorOp.TensorVarOp result) {
-        String prefix = INDEX_PREFIX;
-        String varA = generateVariableName(prefix);
-        String varB = generateVariableName(prefix);
-        String varC = generateVariableName(prefix);
-        String acc = generateVariableName("sum_");
-        final int from = 0;
-        final int to = shape[0];
+    private OpenCLHATKernelBuilder defineMacroTensorMMA(String name) {
+        // params: i, j, k, acc, tensorA, tensorB, tensorC, tensorResult, M, N, K
+        List<String> params = paramsOfTensorMMAMacro();
+        nl().hashDefineKeyword().sp().id(name).paren( _ -> commaSpaceSeparated(params, this::id)).sp().backslash().nl();
+        String from = ZERO;
 
-        forKeyword().sp().paren(_ -> {
-            s32Type().sp().id(varA).assign().intValue(from).semicolon();
-            id(varA).sp().lt().sp().intValue(to).semicolon();
-            id(varA).plusplus();
-        }).sp().brace(_ -> {
-            in().nl().forKeyword().sp().paren(_ -> {
-                s32Type().sp().id(varB).assign().intValue(from).semicolon();
-                id(varB).sp().lt().sp().intValue(to).semicolon();
-                id(varB).plusplus();
-            }).in();
+        String varA = params.get(0);
+        String varB = params.get(1);
+        String varC = params.get(2);
+        String acc = params.get(3);
+        String tensorA = params.get(4);
+        String tensorB = params.get(5);
+        String tensorC = params.get(6);
+        String result = params.get(7);
+        String M = params.get(8);
+        String N = params.get(9);
+        String K = params.get(10);
 
+        forLoop(varA, from, M).sp().brace(_ -> {
+            in().sp().backslash().nl().forLoop(varB, from, N).in();
             brace(_ -> {
-                nl().f32Type().sp().id(acc).assign().id(tensorC.varName()).sbrace( _-> {
-                    id(varA).mul().id(Integer.toString(shape[0])).sp().plus().id(varB);
-                }).semicolon().nl();
-
-                forKeyword().sp().paren(_ -> {
-                    s32Type().sp().id(varC).assign().intValue(from).semicolon();
-                    id(varC).sp().lt().sp().intValue(to).semicolon();
-                    id(varC).plusplus();
-                }).sp().in();
-
+                sp().backslash().nl().f32Type().sp().id(acc).assign().id(tensorC).sbrace(_ ->
+                        id(varA).mul().id(N).sp().plus().id(varB)).semicolon().sp().backslash().nl();
+                forLoop(varC, from, K).sp().in();
                 brace(_ -> {
-                    nl();
+                    sp().backslash().nl();
                     String ha = generateVariableName("ha_");
                     String hb = generateVariableName("hb_");
                     String resultTensor = generateVariableName("h_res_");
-                    f16Type().sp().id(ha).assign().id(tensorA.varName()).sbrace( _ -> id(varA).mul().id(Integer.toString(shape[0])).sp().plus().id(varC)).semicolon().nl();
-                    f16Type().sp().id(hb).assign().id(tensorB.varName()).sbrace( _ -> id(varC).mul().id(Integer.toString(shape[0])).sp().plus().id(varB)).semicolon().nl();
-                    f16Type().sp().id(resultTensor).assign().paren( _ -> f16Type()).brace( _ -> paren( _ -> id(ha).dot().id("value").mul().id(hb).dot().id("value"))).semicolon().nl();
-                    id(acc).sp().plusEquals().cast( _ -> f32Type()).paren( _-> id(resultTensor).dot().id("value")).semicolon().nl();
-                }).nl().out();
-
-                id(result.varName()).sbrace( _ -> id(varA).sp().mul().sp().id(Integer.toString(shape[0])).sp().plus().sp().id(varB)).assign().id(acc).semicolon().nl();
-
-            }).semicolon().nl();
-
-        }).out().out();
+                    f16Type().sp().id(ha).assign().id(tensorA).sbrace(_ -> id(varA).mul().id(K).sp().plus().id(varC)).semicolon().sp().backslash().nl();
+                    f16Type().sp().id(hb).assign().id(tensorB).sbrace(_ -> id(varC).mul().id(N).sp().plus().id(varB)).semicolon().sp().backslash().nl();
+                    f16Type().sp().id(resultTensor).assign().paren(_ -> f16Type()).brace(_ -> paren(_ -> id(ha).dot().id(VALUE).mul().id(hb).dot().id(VALUE))).semicolon().sp().backslash().nl();
+                    id(acc).sp().plusEquals().cast(_ -> f32Type()).paren(_ -> id(resultTensor).dot().id(VALUE)).semicolon().sp().backslash().nl();
+                }).sp().backslash().nl().out();
+                id(result).sbrace(_ -> id(varA).sp().mul().sp().id(N).sp().plus().sp().id(varB)).assign().id(acc).semicolon().sp().backslash().nl();
+            }).sp().backslash().nl().out();
+        }).out();
+        sp().backslash().nl().nl();
         return self();
     }
 
-    @Override
-    public OpenCLHATKernelBuilder hatTensorMMAOp(HATTensorOp.TensorMMAOp tensorMMAOp) {
-        var resulTensorValue = tensorMMAOp.operands().getFirst();
-        var tensorAValue = tensorMMAOp.operands().get(1);
-        var tensorBValue = tensorMMAOp.operands().get(2);
-        var tensorCValue = tensorMMAOp.operands().get(3);
-        var tensorA = findTensorVarOp(tensorAValue);
-        var tensorB = findTensorVarOp(tensorBValue);
-        var tensorC = findTensorVarOp(tensorCValue);
-        var tensorResult = findTensorVarOp(resulTensorValue);
-        if (tensorA == null || tensorB == null || tensorC == null || tensorResult == null) {
-            throw new OpenCLCodeGenException("[Error][CodeGen] Expected a tensorValue, but found `null` instead");
-        }
-        int[] shape = getShapeFromTensorVarOp(tensorA);
-        return generateTensorMMA(shape, tensorA, tensorB, tensorC, tensorResult);
+    public OpenCLHATKernelBuilder parenId(String id) {
+        return paren(_ -> id(id));
     }
 
+    public OpenCLHATKernelBuilder defineMacroTensorLoad(String macroName) {
+        List<String> params = paramsOfTensorLoad();
+        final int from = 0;
+        return macroNoParenthesis(macroName, params, _ -> {
+            sp().backslash().nl();
+            forLoop("varA", Integer.toString(from), "M").sp().in();
+            String row = generateVariableName("row_");
+            brace(_ -> {
+                sp().backslash().nl().s32Type().sp().id(row).assign();
+                id("iIndexValue").plus().id("varA").semicolon().sp().backslash().nl();
+                forLoop("varB", String.valueOf(from), N).sp().in();
+                String col = generateVariableName("col_");
+                brace(_ -> {
+                    sp().backslash().nl().s32Type().sp().id(col).assign().id("jIndexValue").plus().id("varB").semicolon().sp().backslash().nl();
+                    String index = generateVariableName(INDEX_PREFIX);
+                    s32Type().sp().id(index).assign();
 
-    @Override
-    public OpenCLHATKernelBuilder hatTensorStoreLoadOp(HATTensorOp.TensorStoreLoadOp storeLoadOp) {
-        List<Value> operands = storeLoadOp.operands();
-        if (operands.getLast() instanceof Op.Result r) {
-            recurse(r.op());
-        }
-        return self();
+                    id(MACRO_COND).paren(_ -> id(row).comma().id(col).comma().id("isColumnMajor")).sp().mul().sp();
+                    id("leadingDimension").sp().plus().id(MACRO_COND).paren(_ -> id(col).comma().id(row).comma().id("isColumnMajor")).semicolon().sp().backslash().nl();
+
+                    String ha = generateVariableName("ha_");
+
+                    // TODO: We assume a load from global memory. In future version, we will process loads from other memory regions of the accelerator
+                    HAT_GLOBAL_MEM().sp().suffix_t(F16Array.F16Impl.class).asterisk().sp().id(ha).assign().ampersand();
+
+                    id("reference").rarrow().id(ARRAY).sbrace( _ -> id(index)).semicolon().sp().backslash().nl();
+                    String r = generateVariableName("r_");
+                    f16Type().sp().id(r).assign().cast( _ -> f16Type()).brace( _-> id(ha).rarrow().id(VALUE)).semicolon().sp().backslash().nl();
+
+                    // store into the accumulator
+                    emitText("tensorToLoad").sbrace( _ -> id("varA").sp().mul().id(N).sp().plus().id("varB"));
+                    equals().sp().id(r).semicolon().sp().backslash().nl();
+                }).out().sp().backslash().nl();
+            }).out().sp().backslash().nl();
+        });
     }
 
-    private HATTensorOp.TensorVarOp findTensorVarOp(HATTensorOp.TensorLoadOp tensorLoadOp) {
-        var tensorStoreLoadValue = tensorLoadOp.result().uses().getFirst();
-        if (tensorStoreLoadValue.declaringElement() instanceof HATTensorOp.TensorStoreLoadOp tensorStoreLoadOp) {
-            Value first = tensorStoreLoadOp.operands().getFirst();
-            if (first.declaringElement() instanceof HATTensorOp.TensorVarOp tensorVarOp) {
-                return tensorVarOp;
-            } else {
-                return null;
+    /**
+     * Code example being generated:
+     *
+     * <p>
+     * <code>
+     *  for (int m = 0; m < WMMA_M; m++) {
+     *  int rowC = cRow + m;
+     *   for (int n = 0; n < WMMA_N; n++) {
+     *      int colC = cCol + n;
+     *      int idxC = (cRow) + (cCol) * ldc;
+     *      matrixC->array[idxC] = acc[m * 16 + n];
+     *   }
+     * }
+     * </code>
+     * </p>
+     */
+    public OpenCLHATKernelBuilder defineMacroTensorStore(String macroName) {
+        List<String> params = List.of("M", "N", "varA", "varB", "iIndexValue", "jIndexValue", "isColumnMajor", "leadingDimension", "reference", "tensorToStore", "memAccessLayout");
+        return macroNoParenthesis(macroName, params, _ -> {
+            backslash().nl();
+            final int from = 0;
+            forLoop("varA", String.valueOf(from), "M").in();
+            String row = generateVariableName("row_");
+            brace(_ -> {
+                sp().backslash().nl().s32Type().sp().id(row).assign();
+                id("iIndexValue").plus().id("varA").semicolon().sp().backslash().nl();
+                forLoop("varB", String.valueOf(from), "N").sp().in();
+                String col = generateVariableName("col_");
+                brace(_ -> {
+                    sp().backslash().nl().s32Type().sp().id(col).assign();
+                    id("jIndexValue").plus().id("varB").semicolon().sp().backslash().nl();
+                    String index = generateVariableName(INDEX_PREFIX);
+                    s32Type().sp().id(index).assign()
+                            //.id("aVal")
+                            .id(MACRO_COND).paren(_ -> id(row).comma().id(col).comma().id("isColumnMajor"))
+                            .sp().mul().sp().id("leadingDimension").sp().plus()
+                            //.id("bVal")
+                            .id(MACRO_COND).paren(_ -> id(col).comma().id(row).comma().id("isColumnMajor"))
+                            .semicolon().sp().backslash().nl();
+                    // TODO: We assume a load from global memory. In future version, we will process loads from other memory regions of the accelerator
+                    id("reference").rarrow().id(ARRAY).sbrace( _ -> id(index)).assign();
+                    id("tensorToStore").sbrace( _ -> id("varA").mul().id("N").plus().id("varB"));
+                    semicolon().sp().backslash().nl();
+                }).out().sp().backslash().nl();
+            }).out().sp().backslash().nl();
+        });
+    }
+
+    @Override
+    public OpenCLHATKernelBuilder hatBinaryVectorOp(OpHelper.Invoke binOp) {
+        return paren(_-> {
+            recurseResultOrThrow(binOp.op().operands().get(0));
+            sp().id(BinaryOpEnum.of(binOp.op()).symbol()).sp();
+            recurseResultOrThrow(binOp.op().operands().get(1));
+        });
+    }
+
+    @Override
+    protected String mapMathIntrinsic(String hatMathIntrinsicName) {
+        return MATH_FUNCTIONS.getOrDefault(hatMathIntrinsicName, hatMathIntrinsicName);
+    }
+
+    @Override
+    protected OpenCLHATKernelBuilder varOpForNarrowType(CoreOp.VarOp varOp) {
+        // obtain the category:
+        Value first = varOp.operands().getFirst();
+        Class<?> narrowCategory;
+        if (first.declaringElement() instanceof JavaOp.InvokeOp invokeOp) {
+            // Find the category - This is the generic case, when ALL custom ops are removed
+            Stream<OpHelper.Invoke> stream = OpHelper.Invoke.stream(kernelCallGraph.lookup(), invokeOp);
+            Optional<OpHelper.Invoke> invoke = stream.findFirst();
+            narrowCategory = HATPhaseUtils.reduceFloatType(invoke);
+            if (narrowCategory == null && isMathLib(invoke)) {
+                narrowCategory = HATPhaseUtils.reduceFloatTypeFromReturnType(invoke);
             }
         } else {
-            return null;
+            throw new IllegalStateException("Expected an invoke, but found: " + first.declaringElement().getClass());
+        }
+        if (narrowCategory == null) {
+            throw new IllegalStateException("Narrow type can't be null: ");
+        }
+        f16OrBF16(narrowCategory).sp().assign(
+                _ -> id(varOp.varName()),
+                _ -> recurse(OpHelper.asResultOrThrow(varOp.operands().getFirst()).op()));
+        return self();
+    }
+
+    @Override
+    protected OpenCLHATKernelBuilder varOpForVectors(CoreOp.VarOp varOp) {
+        // build VectorType
+        VarType resultType = varOp.resultType();
+        if (!(resultType.valueType() instanceof PrimitiveType)) {
+            IfaceValue.Vector.Shape vectorShape = null;
+            if (resultType.valueType() instanceof ClassType classType) {
+                vectorShape = getVectorShape(kernelCallGraph.lookup(), classType);
+            } else if (resultType.valueType() instanceof VarType varType) {
+                vectorShape = getVectorShape(kernelCallGraph.lookup(), varType.valueType());
+            }
+            if (vectorShape == null) {
+                // guarantee we don't have a null shape. Otherwise. we can't generate the correct code
+                throw new IllegalStateException("Could not find vector shape");
+            }
+            // Emit
+            type(vectorShape.codeType().toString() + vectorShape.lanes());
+            sp().varName(varOp).sp().equals().sp();
+            recurseResultOrThrow(varOp.operands().getFirst());
+        }
+        return self();
+    }
+
+    @Override
+    protected OpenCLHATKernelBuilder varOpInit(CoreOp.VarOp varOp) {
+        suffix_t((ClassType) varOp.varValueType()).sp()
+                .assign(_ -> id(varOp.varName()),
+                        _ -> recurse(OpHelper.asResultOrThrow(varOp.operands().getFirst()).op()));
+        return self();
+    }
+
+    @Override
+    protected OpenCLHATKernelBuilder varOpLocalMemory(CoreOp.VarOp varOp) {
+        HAT_LOCAL_MEM().sp();
+        return varOpPrivateMemory(varOp);
+    }
+
+    @Override
+    protected OpenCLHATKernelBuilder varOpPrivateMemory(CoreOp.VarOp varOp) {
+        VarType resultType = varOp.resultType();
+        if (resultType.valueType() instanceof VarType varType) {
+            suffix_t((ClassType) varType.valueType());
+        } else if (resultType.valueType() instanceof ClassType classType) {
+            suffix_t(classType);
+        }
+        return sp().varName(varOp);
+    }
+
+    @Override
+    protected OpenCLHATKernelBuilder hatWarpSize() {
+        return id("HAT_WRS");
+    }
+
+    private OpenCLHATKernelBuilder generateHatTensorCreate(List<Integer> shape, Object klass, String varTensorName, Value v, int ordering) {
+        // Shapes are given in M,N,K triplet
+        final int sizeToAllocate = switch (ordering) {
+            case TENSOR_ORDER_DEFAULT, TENSOR_ORDER_ACC -> shape.get(0) * shape.get(1); // M x N
+            case TENSOR_ORDER_A ->  shape.get(0) * shape.get(2);  // M x K
+            case TENSOR_ORDER_B ->  shape.get(2) * shape.get(1);  // K x N
+            default -> throw new IllegalStateException("Unexpected value: " + ordering);
+        };
+
+        id(MACRO_FRAMGMENT_CREATE).paren( _ -> {
+            switch (klass) {
+                case ClassType classType when OpHelper.isAssignable(scopedCodeBuilderContext.lookup(), classType, F16.class) ->
+                        f16Type();
+                case PrimitiveType primitiveType when primitiveType.equals(PrimitiveType.FLOAT) -> type("float");
+                case null, default -> {
+                    // When we derive the type for tensors that are not accumulators
+                    if (v.declaringElement() instanceof CoreOp.VarOp tensorVarOp) {
+                        Value tensorVar = tensorVarOp.result();
+                        String loadVariance = findLoadVariance(tensorVar, tensorVarOp);
+                        CodeGenAction typeFunction = tensorTypeTable.getOrDefault(loadVariance, null);
+                        if (typeFunction == null) {
+                            throw new IllegalStateException("Load Type not supported:" + typeFunction);
+                        }
+                        typeFunction.apply();
+                    }
+                }
+            }
+            comma().sp().varName(varTensorName).comma().sp().intValue(sizeToAllocate);
+        });
+        return self();
+    }
+
+    private OpenCLHATKernelBuilder createTensor(OpHelper.Invoke tensorCreateInvoke) {
+        Value v = tensorCreateInvoke.op().result().uses().getFirst();
+        if (v.declaringElement() instanceof CoreOp.VarOp tensorVarOp) {
+            var shapeValue = findShape(tensorVarOp.result(), tensorVarOp.result());
+            var varTensorName = tensorVarOp.varName();
+            var ordering = getTensorOrder(tensorVarOp.result());
+            List<Integer> shape = obtainShapeTensor(shapeValue);
+            return generateHatTensorCreate(shape, null, varTensorName, v, ordering);
+        } else {
+            throw new IllegalStateException("Value not supported");
+        }
+    }
+
+    private OpenCLHATKernelBuilder createTensorAccumulator(OpHelper.Invoke tensorCreateInvoke) {
+        Value v = tensorCreateInvoke.op().result().uses().getFirst();
+        Value shapeValue = tensorCreateInvoke.op().operands().getFirst();
+        List<Integer> shape = obtainShapeTensor(shapeValue);
+        Object klass = null;
+        Value classOperand = tensorCreateInvoke.op().operands().getLast();
+        if (classOperand.declaringElement() instanceof CoreOp.ConstantOp constantOp) {
+            klass = constantOp.value();
+        }
+        String varTensorName = null;
+        if (v.declaringElement() instanceof CoreOp.VarOp tensorVarOp) {
+            varTensorName = tensorVarOp.varName();
+        }
+        return generateHatTensorCreate(shape, klass, varTensorName, v, TENSOR_ORDER_ACC);
+    }
+
+    @Override
+    public OpenCLHATKernelBuilder hatTensorCreateOperation(OpHelper.Invoke invoke) {
+        List<Value> operands = invoke.op().operands();
+        if (operands.isEmpty()) {
+            return createTensor(invoke);
+        } else {
+            return createTensorAccumulator(invoke);
         }
     }
 
@@ -641,47 +773,50 @@ public class OpenCLHATKernelBuilder extends C99HATKernelBuilder<OpenCLHATKernelB
      * @param ptrValue
      * @param tensorVarOp
      *
-     * @return {@link OpenCLHATKernelBuilder}
      */
-    private OpenCLHATKernelBuilder generateTensorLoad(int[] shape, Value iIndexValue, Value jIndexValue, boolean isColumnMajor, Value leadingDimension, Value ptrValue, HATTensorOp.TensorVarOp tensorVarOp) {
+    private void generateTensorLoadF16(List<Integer> shape, Value iIndexValue, Value jIndexValue, boolean isColumnMajor, Value leadingDimension, Value ptrValue, CoreOp.VarOp tensorVarOp, int tensorOrder) {
 
-        String prefix = INDEX_PREFIX;
-        String varA = generateVariableName(prefix);
-        String varB = generateVariableName(prefix);
-        final int to = shape[0];
+        String varA = generateVariableName(INDEX_PREFIX);
+        String varB = generateVariableName(INDEX_PREFIX);
         final int from = 0;
+        final int M;
+        final int N;
 
-        forKeyword().sp().paren(_ -> {
-            s32Type().sp().id(varA).assign().intValue(from).semicolon();
-            id(varA).sp().lt().sp().intValue(to).semicolon();
-            id(varA).plusplus();
-        }).in();
+        // ---------------------------
+        // Shapes:
+        // tensor A   with shape: MxK
+        // tensor B   with shape: KxN
+        // ---------------------------
+        String matrixOrder = tensorOrderTable.get(tensorOrder);
+        switch (matrixOrder) {
+            case TENSOR_MATRIX_A -> {
+                M = shape.get(0); // M
+                N = shape.get(2); // K
+            }
+            case TENSOR_MATRIX_B -> {
+                M = shape.get(2); // K
+                N = shape.get(1); // N
+            }
+            case null, default -> throw new IllegalStateException("Tensor load matrix order not detected");
+        }
+
+        // We need to get if tensorA or tensorB is being loaded
+
+        forLoop(varA, String.valueOf(from), String.valueOf(M)).sp().in();
 
         String row = generateVariableName("row_");
 
         brace(_ -> {
             nl().s32Type().sp().id(row).assign();
 
-            if (iIndexValue instanceof Op.Result r) {
-                recurse(r.op());
-            }
-            plus().id(varA).semicolon().nl();
+            recurseResultOrThrow(iIndexValue).plus().id(varA).semicolon().nl();
 
-            forKeyword().sp().paren(_ -> {
-                s32Type().sp().id(varB).assign().intValue(from).semicolon();
-                id(varB).sp().lt().sp().intValue(to).semicolon();
-                id(varB).plusplus();
-            }).sp().in();
+            forLoop(varB, String.valueOf(from), String.valueOf(N)).sp().in();
 
             String col = generateVariableName("col_");
 
             brace(_ -> {
-                nl().s32Type().sp().id(col).assign();
-
-                if (jIndexValue instanceof Op.Result r) {
-                    recurse(r.op());
-                }
-                plus().id(varB).semicolon().nl();
+                nl().s32Type().sp().id(col).assign().recurseResultOrThrow(jIndexValue).plus().id(varB).semicolon().nl();
 
                 String index = generateVariableName(INDEX_PREFIX);
                 s32Type().sp().id(index).assign();
@@ -692,35 +827,21 @@ public class OpenCLHATKernelBuilder extends C99HATKernelBuilder<OpenCLHATKernelB
                     aVal = col;
                     bVal = row;
                 }
-
                 id(aVal).sp().mul().sp();
-                if (leadingDimension instanceof Op.Result r) {
-                    recurse(r.op());
-                }
-                sp().plus().id(bVal).semicolon().nl();
+                recurseResultOrThrow(leadingDimension).sp().plus().id(bVal).semicolon().nl();
 
-
-                // TODO: We assume a load from global memory. In
-                // future version, we will process loads from other
-                // memory regions of the accelerator
-
+                // TODO: We assume a load from global memory. In future version, we will process loads from other memory regions of the accelerator
                 String ha = generateVariableName("ha_");
-                id("HAT_GLOBAL_MEM F16Impl_t").asterisk().sp().id(ha).assign().ampersand();
-
-                if (ptrValue instanceof  Op.Result r) {
-                    recurse(r.op());
-                }
-                rarrow().id("array").sbrace( _ -> id(index)).semicolon().nl();
-
+                type((JavaType) tensorVarOp.varValueType()).sp().id(ha).assign().ampersand();
+                recurseResultOrThrow(ptrValue).rarrow().id(ARRAY).sbrace( _ -> id(index)).semicolon().nl();
                 String r = generateVariableName("r_");
-                f16Type().sp().id(r).assign().cast( _ -> f16Type()).brace( _-> id(ha).rarrow().id("value")).semicolon().nl();
+                f16Type().sp().id(r).assign().cast( _ -> f16Type()).brace( _-> id(ha).rarrow().id(VALUE)).semicolon().nl();
 
-                // store into the acc
-                emitText(tensorVarOp.varName()).sbrace( _ -> id(varA).sp().mul().id(Integer.toString(shape[0])).sp().plus().id(varB));
+                // store into the accumulator
+                emitText(tensorVarOp.varName()).sbrace( _ -> id(varA).sp().mul().intValue(N).sp().plus().id(varB));
                 equals().sp().id(r).semicolon().nl();
             }).out();
         }).out();
-        return self();
     }
 
     /**
@@ -729,7 +850,7 @@ public class OpenCLHATKernelBuilder extends C99HATKernelBuilder<OpenCLHATKernelB
      * <p>
      * <code>
      *     for (int m = 0; m < WMMA_M; m++) {
-                int rowB = bRow + m;
+     *          int rowB = bRow + m;
      *          for (int n = 0; n < WMMA_N; n++) {
      *            int colB = bCol + n;
      *            int idxB = rowB + colB * ldb;
@@ -741,175 +862,128 @@ public class OpenCLHATKernelBuilder extends C99HATKernelBuilder<OpenCLHATKernelB
      * </code>
      * </p>
      *
-     * @param tensorLoadOp
+     * @param tensorLoadInvoke
      *
      * @return {@link OpenCLHATKernelBuilder}
      */
     @Override
-    public OpenCLHATKernelBuilder hatTensorLoadOp(HATTensorOp.TensorLoadOp tensorLoadOp) {
-
-        List<Value> operands = tensorLoadOp.operands();
+    protected OpenCLHATKernelBuilder hatTensorLoad(OpHelper.Invoke tensorLoadInvoke) {
+        List<Value> operands = tensorLoadInvoke.op().operands();
         var ptrValue = operands.getFirst();
         var iIndexValue = operands.get(1);
         var jIndexValue = operands.get(2);
         var leadingDimension = operands.get(3);
-        HATTensorOp.TensorVarOp tensorVarOp = findTensorVarOp(tensorLoadOp);
-        int[] shape;
-        boolean isColumnMajor;
+        CoreOp.VarOp tensorVarOp = findTensorVarOp(tensorLoadInvoke);
+        List<Integer> shape;
         if (tensorVarOp != null) {
-            shape = getShapeFromTensorVarOp(tensorVarOp);
-            isColumnMajor = isColumnMajorFromVarOp(tensorVarOp);
+            shape = obtainShapeTensor(operands.get(4));
         } else {
-            throw new OpenCLCodeGenException("[Error][CodeGen] Expected to see an instance of tensorVarOp but `null` found");
+            throw new IllegalStateException("[Error][CodeGen] Expected to see an instance of tensorVarOp but `null` found");
         }
-        generateTensorLoad(shape, iIndexValue, jIndexValue, isColumnMajor, leadingDimension, ptrValue, tensorVarOp);
-        HAT_BARRIER();
-        return self();
-    }
 
-    /**
-     * Example of code being generated:
-     *
-     * <p>
-     * <code>
-     *  for (int m = 0; m < WMMA_M; m++) {
-     *  `int rowC = cRow + m;
-     *   for (int n = 0; n < WMMA_N; n++) {
-     *      int colC = cCol + n;
-     *      int idxC = (cRow) + (cCol) * ldc;
-     *      matrixC->array[idxC] = acc[m * 16 + n];
-     *   }
-     * }
-     * </code>
-     * </p>
-     *
-     * @param shape
-     * @param iIndexValue
-     * @param jIndexValue
-     * @param isColumnMajor
-     * @param leadingDimension
-     * @param ptrValue
-     * @param tensorVarOp
-     *
-     * @return {@link OpenCLHATKernelBuilder}
-     */
-    private OpenCLHATKernelBuilder generateTensorStore(int[] shape, Value iIndexValue, Value jIndexValue, boolean isColumnMajor, Value leadingDimension, Value ptrValue, HATTensorOp.TensorVarOp tensorVarOp) {
-        String prefix = INDEX_PREFIX;
-        String varA = generateVariableName(prefix);
-        String varB = generateVariableName(prefix);
-        final int to = shape[0];
-        final int from = 0;
+        // Obtain if tensorA or tensorB is being loaded.
+        // This is important to get the loop-bounds correct if matrices are not square
+        int tensorOrder = getTensorOrder(tensorVarOp.result());
 
-        forKeyword().sp().paren(_ -> {
-            s32Type().sp().id(varA).assign().intValue(from).semicolon();
-            id(varA).sp().lt().sp().intValue(to).semicolon();
-            id(varA).plusplus();
-        }).in();
+        boolean isColumnMajor;
+        if (tensorLoadInvoke.op().operands().size() == 6) {
+            isColumnMajor = isColumnMajor(operands.getLast());
+        } else {
+            isColumnMajor = false;
+        }
 
-        String row = generateVariableName("row_");
+        String varA = generateVariableName(INDEX_PREFIX);
+        String varB = generateVariableName(INDEX_PREFIX);
+        final int M;
+        final int N;
 
-        brace(_ -> {
-            nl().s32Type().sp().id(row).assign();
-
-            if (iIndexValue instanceof Op.Result r) {
-                recurse(r.op());
+        // ---------------------------
+        // Shapes:
+        // tensor A   with shape: MxK
+        // tensor B   with shape: KxN
+        // ---------------------------
+        String matrixOrder = tensorOrderTable.get(tensorOrder);
+        switch (matrixOrder) {
+            case TENSOR_MATRIX_A -> {
+                M = shape.get(0); // M
+                N = shape.get(2); // K
             }
-            plus().id(varA).semicolon().nl();
+            case TENSOR_MATRIX_B -> {
+                M = shape.get(2); // K
+                N = shape.get(1); // N
+            }
+            case null, default -> throw new IllegalStateException("Tensor load matrix order not detected");
+        }
 
-            forKeyword().sp().paren(_ -> {
-                s32Type().sp().id(varB).assign().intValue(from).semicolon();
-                id(varB).sp().lt().sp().intValue(to).semicolon();
-                id(varB).plusplus();
-            }).sp().in();
-
-            String col = generateVariableName("col_");
-
-            brace(_ -> {
-                nl().s32Type().sp().id(col).assign();
-
-                if (jIndexValue instanceof Op.Result r) {
-                    recurse(r.op());
-                }
-                plus().id(varB).semicolon().nl();
-
-                String index = generateVariableName(INDEX_PREFIX);
-                s32Type().sp().id(index).assign();
-
-                String aVal = row;
-                String bVal = col;
-                if (isColumnMajor) {
-                    aVal = col;
-                    bVal = row;
-                }
-
-                id(aVal).sp().mul().sp();
-                if (leadingDimension instanceof Op.Result r) {
-                    recurse(r.op());
-                }
-                sp().plus().id(bVal).semicolon().nl();
-
-                // TODO: We assume a load from global memory. In
-                // future version, we will process loads from other
-                // memory regions of the accelerator
-                if (ptrValue instanceof  Op.Result r) {
-                    recurse(r.op());
-                }
-                rarrow().id("array").sbrace( _ -> id(index)).assign();
-                id(tensorVarOp.varName()).sbrace( _ -> id(varA).mul().id(Integer.toString(shape[0])).plus().id(varB));
-                semicolon().nl();
-            }).out();
-        }).out();
-        return self();
+        // params:         List<String> params = List.of("M", "N", "varA", "varB", "iIndexValue", "jIndexValue", "isColumnMajor", "leadingDimension", "reference", "tensorToLoad");
+        return id(MACRO_FRAGMENT_LOAD_F16).paren(_ ->
+                intValue(M).comma().sp()
+                        .intValue(N).comma().sp()
+                        .id(varA).comma().sp()
+                        .id(varB).comma().sp()
+                        .recurseResultOrThrow(iIndexValue).comma().sp()
+                        .recurseResultOrThrow(jIndexValue).comma().sp()
+                        .id(String.valueOf(isColumnMajor)).comma().sp()
+                        .recurseResultOrThrow(leadingDimension).comma().sp()
+                        .recurseResultOrThrow(ptrValue).comma().sp()
+                        .id(tensorVarOp.varName()));
     }
 
     /**
-     * Code example being generated:
+     * Code example being generated via the {@code MACRO_FRAGMENT_STORE} macro.
      *
      * <p>
-     * <code>
+     * {@code
      *  for (int m = 0; m < WMMA_M; m++) {
-     *  `int rowC = cRow + m;
+     *  int rowC = cRow + m;
      *   for (int n = 0; n < WMMA_N; n++) {
      *      int colC = cCol + n;
      *      int idxC = (cRow) + (cCol) * ldc;
      *      matrixC->array[idxC] = acc[m * 16 + n];
      *   }
      * }
-     * </code>
+     * }
      * </p>
      *
-     * @param tensorStoreOp
+     * @param tensorStoreInvoke
      *
      * @return {@link OpenCLHATKernelBuilder}
      */
     @Override
-    public OpenCLHATKernelBuilder hatTensorStoreOp(HATTensorOp.TensorStoreOp tensorStoreOp) {
-        // 1. We need the global ptr
-        // 2. We need the indexes (i, j)
-        // 3. We need leading dimension
-        // 4. We need the name of the tensor
-        // 5. We need the shape
-        // 6. We need the access layout
-
-        List<Value> operands = tensorStoreOp.operands();
-        var ptrValue = operands.getFirst();
-        var iIndexValue = operands.get(1);
-        var jIndexValue = operands.get(2);
-        var tensorValue = operands.get(3);
-        var leadingDimension = operands.get(4);
-
-        HATTensorOp.TensorVarOp tensorVarOp = findTensorVarOp(tensorValue);
-        if (tensorVarOp == null) {
-            throw new OpenCLCodeGenException("[Error][CodeGen] Expected to find a tensorVarOp, but `null` instead.");
+    protected OpenCLHATKernelBuilder hatTensorStore(OpHelper.Invoke tensorStoreInvoke) {
+        List<Value> operands = tensorStoreInvoke.op().operands();
+        Value reference = operands.getFirst();
+        Value iIndex = operands.get(1);
+        Value jIndex = operands.get(2);
+        Value tensorToStore = operands.get(3);
+        Value ldSize = operands.get(4);
+        CoreOp.VarOp tensorVarOp = findVarOpOrThrow(tensorToStore);
+        var shape = getShapeFromTensorVarOp(tensorVarOp);
+        final boolean isColumnMajor;
+        if (tensorStoreInvoke.op().operands().size() == 6) {
+            isColumnMajor = isColumnMajor(operands.getLast());
+        } else {
+            isColumnMajor = false;
         }
 
-        int[] shape = getShapeFromTensorVarOp(tensorVarOp);
+        // Output is MxN, given the shape in an (M,N,K) triplet
+        final int M = shape.get(0);
+        final int N = shape.get(1);
+        String varA = generateVariableName(INDEX_PREFIX);
+        String varB = generateVariableName(INDEX_PREFIX);
 
-        Value accessLayout = operands.get(5);
-        final boolean isColumnMajor = isColumnMajor(accessLayout);
-
-        generateTensorStore(shape, iIndexValue, jIndexValue, isColumnMajor, leadingDimension, ptrValue, tensorVarOp);
-        return self();
+        // params:         List<String> params = List.of("M", "N", "varA", "varB", "iIndexValue", "jIndexValue", "isColumnMajor", "leadingDimension", "reference", "tensorToStore", "memAccessLayout");
+        return id(MACRO_FRAGMENT_STORE).paren(_ ->
+                intValue(M).comma().sp()
+                        .intValue(N).comma().sp()
+                        .id(varA).comma().sp()
+                        .id(varB).comma().sp()
+                        .recurseResultOrThrow(iIndex).comma().sp()
+                        .recurseResultOrThrow(jIndex).comma().sp()
+                        .id(String.valueOf(isColumnMajor)).comma().sp()
+                        .recurseResultOrThrow(ldSize).comma().sp()
+                        .recurseResultOrThrow(reference).comma().sp()
+                        .id(tensorVarOp.varName()).comma().sp()
+                        .id(ZERO));
     }
-
 }
